--- a/ThereYet/Base.lproj/Main.storyboard
+++ b/ThereYet/Base.lproj/Main.storyboard
@@ -106,7 +106,7 @@
                                         <rect key="frame" x="0.0" y="92" width="600" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="F87-a9-Gjc" id="55p-X5-Uxx">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPp-AQ-aVX">
@@ -161,11 +161,124 @@
                     <view key="view" contentMode="scaleToFill" id="wky-YO-cEc">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="61" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JRh-9F-ZBJ">
+                                <rect key="frame" x="0.0" y="365" width="600" height="235"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="235" id="LG6-bN-jgy"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="uQE-wn-qH4" customClass="TodaysCourseTableViewCell" customModule="ThereYet" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="61"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uQE-wn-qH4" id="WDU-Rf-OyA">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="61"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calculus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oWK-2X-hNk">
+                                                    <rect key="frame" x="13" y="8" width="82" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="82" id="FCx-MO-1ZQ"/>
+                                                        <constraint firstAttribute="height" constant="21" id="b1W-Am-v57"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AeV-wa-aBs">
+                                                    <rect key="frame" x="0.0" y="0.0" width="5" height="61"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00am - 10:50am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VlA-AX-fFK">
+                                                    <rect key="frame" x="13" y="32" width="150" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="150" id="yWC-oW-MgN"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                                    <color key="textColor" red="0.20000000000000001" green="0.18823529410000001" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="oWK-2X-hNk" firstAttribute="leading" secondItem="WDU-Rf-OyA" secondAttribute="leading" constant="13" id="4sI-9a-6rr"/>
+                                                <constraint firstItem="AeV-wa-aBs" firstAttribute="centerY" secondItem="WDU-Rf-OyA" secondAttribute="centerY" id="Ea9-MT-Wds"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="VlA-AX-fFK" secondAttribute="bottom" constant="-0.5" id="SAz-Rf-keu"/>
+                                                <constraint firstItem="VlA-AX-fFK" firstAttribute="leading" secondItem="oWK-2X-hNk" secondAttribute="leading" id="ZQ3-pI-sXk"/>
+                                                <constraint firstItem="oWK-2X-hNk" firstAttribute="top" secondItem="WDU-Rf-OyA" secondAttribute="topMargin" id="bKh-53-TPz"/>
+                                                <constraint firstItem="oWK-2X-hNk" firstAttribute="leading" secondItem="AeV-wa-aBs" secondAttribute="trailing" constant="8" symbolic="YES" id="cId-0J-8A4"/>
+                                                <constraint firstItem="AeV-wa-aBs" firstAttribute="leading" secondItem="WDU-Rf-OyA" secondAttribute="leading" id="enT-oh-Q4z"/>
+                                                <constraint firstItem="VlA-AX-fFK" firstAttribute="top" secondItem="oWK-2X-hNk" secondAttribute="bottom" constant="3" id="mqM-1y-GRq"/>
+                                                <constraint firstItem="AeV-wa-aBs" firstAttribute="top" secondItem="WDU-Rf-OyA" secondAttribute="top" id="uHd-zd-LWv"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qf0-SW-oJA">
+                                <rect key="frame" x="240" y="100" width="120" height="120"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_courses" translatesAutoresizingMaskIntoConstraints="NO" id="pC8-My-ogT">
+                                        <rect key="frame" x="30" y="30" width="60" height="60"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.14999999999999999" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="G7N-S7-7R9"/>
+                                    <constraint firstItem="pC8-My-ogT" firstAttribute="centerY" secondItem="Qf0-SW-oJA" secondAttribute="centerY" id="Whq-e2-E3W"/>
+                                    <constraint firstItem="pC8-My-ogT" firstAttribute="centerX" secondItem="Qf0-SW-oJA" secondAttribute="centerX" id="Zwl-zb-F2h"/>
+                                    <constraint firstItem="pC8-My-ogT" firstAttribute="leading" secondItem="Qf0-SW-oJA" secondAttribute="leading" constant="30" id="jij-aj-44I"/>
+                                    <constraint firstAttribute="width" constant="120" id="q6I-Fo-qqu"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="60"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="45 minutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vWc-QZ-kRT">
+                                <rect key="frame" x="257" y="257" width="86" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="7Nf-7n-wyb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Next class in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XbU-LJ-A37">
+                                <rect key="frame" x="212" y="228" width="176" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="BpJ-0z-XqN"/>
+                                    <constraint firstAttribute="width" constant="176" id="OF8-6f-Yqx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.11764705882352941" green="0.68627450980392157" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="JRh-9F-ZBJ" firstAttribute="top" secondItem="vWc-QZ-kRT" secondAttribute="bottom" constant="87" id="5lx-ki-FqZ"/>
+                            <constraint firstItem="Qf0-SW-oJA" firstAttribute="centerX" secondItem="wky-YO-cEc" secondAttribute="centerX" id="El5-Pe-bLa"/>
+                            <constraint firstItem="XbU-LJ-A37" firstAttribute="centerX" secondItem="wky-YO-cEc" secondAttribute="centerX" id="IOl-Hk-aP0"/>
+                            <constraint firstItem="vWc-QZ-kRT" firstAttribute="top" secondItem="XbU-LJ-A37" secondAttribute="bottom" constant="1" id="K4y-X1-aFt"/>
+                            <constraint firstItem="Qf0-SW-oJA" firstAttribute="top" secondItem="36g-pp-zJu" secondAttribute="bottom" constant="36" id="MWn-XA-URI"/>
+                            <constraint firstItem="vWc-QZ-kRT" firstAttribute="centerX" secondItem="wky-YO-cEc" secondAttribute="centerX" id="OXk-aW-wzY"/>
+                            <constraint firstItem="JRh-9F-ZBJ" firstAttribute="bottom" secondItem="883-1b-UkI" secondAttribute="top" id="dqF-Dm-kOL"/>
+                            <constraint firstAttribute="trailing" secondItem="JRh-9F-ZBJ" secondAttribute="trailing" id="eaB-38-yHP"/>
+                            <constraint firstItem="XbU-LJ-A37" firstAttribute="top" secondItem="Qf0-SW-oJA" secondAttribute="bottom" constant="8" symbolic="YES" id="gqT-Zd-z04"/>
+                            <constraint firstItem="JRh-9F-ZBJ" firstAttribute="leading" secondItem="wky-YO-cEc" secondAttribute="leading" id="gun-Kk-HpB"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Home" id="9w6-mR-aWt">
                         <barButtonItem key="leftBarButtonItem" image="menu.png" id="VGG-xd-tmx"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="JRh-9F-ZBJ" id="pF4-gz-hvz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DbA-a6-rMN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -301,6 +414,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ic_courses" width="60" height="60"/>
         <image name="menu.png" width="20" height="15"/>
     </resources>
 </document>
