--- a/ThereYet/Main.storyboard
+++ b/ThereYet/Main.storyboard
@@ -616,7 +616,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
-                                            <segue destination="iTE-4t-60g" kind="show" id="AQb-6q-fDb"/>
+                                            <segue destination="iTE-4t-60g" kind="show" identifier="selectColor" id="AQb-6q-fDb"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -630,6 +630,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -811,14 +812,32 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="USa-0W-ake">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="USa-0W-ake" customClass="CellWithCheckmark" customModule="ThereYet" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_check" translatesAutoresizingMaskIntoConstraints="NO" id="MKf-ep-xKZ">
+                                                    <rect key="frame" x="77" y="77" width="15" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="15" id="3ra-qe-2KQ"/>
+                                                        <constraint firstAttribute="height" constant="15" id="WEb-vD-bAo"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <color key="backgroundColor" red="0.90986210109999999" green="0.2303439826" blue="0.2484431416" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="MKf-ep-xKZ" secondAttribute="trailing" constant="8" id="2UK-7N-YPc"/>
+                                            <constraint firstAttribute="bottom" secondItem="MKf-ep-xKZ" secondAttribute="bottom" constant="8" id="lhF-pb-tjj"/>
+                                        </constraints>
+                                        <size key="customSize" width="100" height="100"/>
+                                        <connections>
+                                            <outlet property="checkmark" destination="MKf-ep-xKZ" id="4rb-45-jhb"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -863,6 +882,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ic_check" width="60" height="60"/>
         <image name="ic_courses" width="60" height="60"/>
         <image name="menu.png" width="20" height="15"/>
     </resources>
